--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "Siesta-Fiesta",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "@rails/webpacker": "^4.2.0",
     "bootstrap": "^4.3.1",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.5.0",
+    "places.js": "^1.17.1",
     "popper.js": "^1.16.0"
   },
   "devDependencies": {
